# ardour-qml

./: CMakeLists.txt  LICENSE  README.md  ardour.cmake
Ardour/: CMakeLists.txt
Ardour/ardour/: CMakeLists.txt
Ardour/example/: example.cpp  example.qml
ardour-cmake/: CMakeLists.txt  revision.cc.in
ardour-cmake/LV2/: CMakeLists.txt
ardour-cmake/LV2/a-comp.lv2/: CMakeLists.txt
ardour-cmake/LV2/a-delay.lv2/: CMakeLists.txt
ardour-cmake/LV2/a-eq.lv2/: CMakeLists.txt
ardour-cmake/LV2/a-exp.lv2/: CMakeLists.txt
ardour-cmake/LV2/a-fluidsynth.lv2/: CMakeLists.txt
ardour-cmake/LV2/a-reverb.lv2/: CMakeLists.txt
ardour-cmake/LV2/a-vapor.lv2/: CMakeLists.txt
ardour-cmake/LV2/reasonablesynth.lv2/: CMakeLists.txt
ardour-cmake/appleutility/: CMakeLists.txt
ardour-cmake/audiographer/: CMakeLists.txt
ardour-cmake/backends/: CMakeLists.txt
ardour-cmake/ctrl-interface/: CMakeLists.txt
ardour-cmake/evoral/: CMakeLists.txt
ardour-cmake/fluidsynth/: CMakeLists.txt
ardour-cmake/lua/: CMakeLists.txt
ardour-cmake/midi++2/: CMakeLists.txt
ardour-cmake/panners/: CMakeLists.txt
ardour-cmake/pbd/: CMakeLists.txt
ardour-cmake/temporal/: CMakeLists.txt
ardour-cmake/zita-convolver/: CMakeLists.txt
ardour-cmake/zita-resampler/: CMakeLists.txt
example/: MainView.qml  NewAudioTrackDialog.qml  RegionDelegate.qml  Strip.qml  Timeline.qml  TrackHeader.qml  example.cpp  example.qml
qmlmodules/Ardour/: Ardour.cpp  Ardour.h  ArdourPlugin.cpp  ArdourPlugin.h  AudioRegion.cpp  AudioRegion.h  AudioTrigger.cpp  AudioTrigger.h  AutomationControl.cpp  AutomationControl.h  Beats.h  CMakeLists.txt  ChanCount.h  Controllable.cpp  Controllable.h  CoreSelection.cpp  CoreSelection.h  Enums.h  FollowAction.cpp  FollowAction.h  GridModel.cpp  GridModel.h  Location.cpp  Location.h  MidiRegion.cpp  MidiRegion.h  MidiView.cpp  MidiView.h  Playlist.cpp  Playlist.h  PluginInfo.h  PluginManager.cpp  PluginManager.h  PresentationInfo.cpp  PresentationInfo.h  Processor.cpp  Processor.h  QtBridgeUi.cpp  QtBridgeUi.h  Region.cpp  (+33 more)
qmlmodules/Ardour/shaders/: color.frag  color.vert
tests/: CMakeLists.txt  SessionTest.cpp  SessionTest.h
